--- a/public/global.css
+++ b/public/global.css
@@ -1,63 +1,37 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+.defaults {
+	--main-font: 'Roboto Slab', serif;
+	--secondary-font: 'Open Sans', sans-serif;
 }
 
-body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+.theme-1 {
+	--corner-radius: 10px;
+	--background-color: #eeeeee;
+	--secondary-background-color: #f1faee;
+	--border-color: #457b9d;
+	--main-text-color: #e63946;
+	--secondary-text-color: #457b9d;
+	--header-background-color: #cccccc;
 }
 
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
+.theme-2 {
+	--corner-radius: 20px;
+	--background-color: #eeeeee;
+	--secondary-background-color: #f1faee;
+	--border-color: #457b9d;
+	--main-text-color: #e63946;
+	--secondary-text-color: #457b9d;
+	--header-background-color: #cccccc;
 }
 
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+.theme-3 {
+	--corner-radius: 30px;
+	--background-color: #eeeeee;
+	--secondary-background-color: #f1faee;
+	--border-color: #457b9d;
+	--main-text-color: #e63946;
+	--secondary-text-color: #457b9d;
+	--header-background-color: #cccccc;
 }
