--- a/public/global.css
+++ b/public/global.css
@@ -6,9 +6,9 @@
 .theme-1 {
   --corner-radius: 10px;
   --background-color: #eeeeee;
-  --secondary-background-color: #f1faee;
+  --secondary-background-color: #f9fafb;
   --border-color: #111827;
-  --main-text-color: #ffffff;
+  --main-text-color: #000000;
   --secondary-text-color: #f3f4f6;
   --header-background-color: #cccccc;
   --main-font: "acumin-pro", sans-serif;
