--- a/public/global.css
+++ b/public/global.css
@@ -9,7 +9,7 @@
   --secondary-background-color: #f9fafb;
   --border-color: #111827;
   --main-text-color: #000000;
-  --secondary-text-color: #f3f4f6;
+  --secondary-text-color: #0f172a;
   --header-background-color: #cccccc;
   --main-font: "acumin-pro", sans-serif;
   --secondary-font: sans-serif;
