--- a/public/global.css
+++ b/public/global.css
@@ -10,7 +10,7 @@
   --border-color: #111827;
   --main-text-color: #000000;
   --secondary-text-color: #0f172a;
-  --header-background-color: #18181b;
+  --header-background-color: #064e3b;
   --main-font: "acumin-pro", sans-serif;
   --secondary-font: sans-serif;
 }
