--- a/public/global.css
+++ b/public/global.css
@@ -7,7 +7,7 @@
   --corner-radius: 10px;
   --background-color: #eeeeee;
   --secondary-background-color: #f9fafb;
-  --border-color: #111827;
+  --border-color: #0e7490;
   --main-text-color: #000000;
   --secondary-text-color: #0f172a;
   --header-background-color: #064e3b;
